Allow overriding cell values

--- a/bin/index.html
+++ b/bin/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Search Box Test</title>
+    <title>Fancy Table Demo</title>
     <link rel="stylesheet" href="./basic.css">
     <style media="screen">
       body {
