--- a/bin/index.html
+++ b/bin/index.html
@@ -12,6 +12,7 @@
         margin: 0;
       }
       .table-container {
+        height: 400px;
         margin: 30px auto 0;
         max-width: 800px;
         position: relative;
