Render all rows and fix some row-related styling

--- a/bin/index.html
+++ b/bin/index.html
@@ -18,7 +18,7 @@
         position: relative;
         width: 60%;
       }
-      .ft-cell .fa-external-link-square {
+      .ft-cell-content .fa-external-link-square {
         color: #bbb;
         position: absolute;
         right: 30px;
@@ -26,11 +26,11 @@
         transition: 300ms color, 300ms opacity;
       }
 
-      .ft-cell:hover .fa-external-link-square {
+      .ft-cell-content:hover .fa-external-link-square {
         opacity: 1;
       }
 
-      .ft-cell:hover .fa-external-link-square:hover {
+      .ft-cell-content:hover .fa-external-link-square:hover {
         color: #0ad;
       }
     </style>
