display selection and active

--- a/bin/index.html
+++ b/bin/index.html
@@ -36,7 +36,8 @@
     </style>
   </head>
   <body>
-    <div class="table-container"></div>
+    <div class="table-container table-container-nested"></div>
+    <div class="table-container table-container-flat"></div>
     <script type="text/javascript" src="./demo.js"></script>
   </body>
 </html>
